Fix z-index on buttons

--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@ nav {
     padding: 4px 8px;
     box-sizing: border-box;
     border-bottom: 1px solid #999;
+    z-index: 1;
 }
 
 nav img {
@@ -17,7 +18,6 @@ nav img {
 header {
     width: 100%;
     position: relative;
-    z-index: -1;
     margin-bottom: 20vh;
 }
 
